[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fontes/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/characters/DinoSprites - doux.png" type="Texture" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 10
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 10
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 432, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 456, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 504, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 528, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 552, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Menu" type="Node"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label_jogo" type="Label" parent="Control"]
margin_left = 62.0
margin_top = 45.0
margin_right = 433.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "JURASSIC JUMP"

[node name="Label_recorde" type="Label" parent="Control"]
margin_left = 95.0
margin_top = 97.0
margin_right = 365.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Your biggest record is  X points!"

[node name="Label_Controle" type="Label" parent="Control"]
margin_left = 141.0
margin_top = 223.0
margin_right = 330.0
margin_bottom = 243.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "press backspace to jump"

[node name="Button_jogo" type="Button" parent="Control"]
margin_left = 358.0
margin_top = 140.0
margin_right = 465.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="Button_credits" type="Button" parent="Control"]
margin_left = 358.0
margin_top = 179.0
margin_right = 465.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 2 )
text = "CREDITS"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 47, 217 )
scale = Vector2( 1.79167, 1.625 )
frames = SubResource( 7 )
playing = true

[connection signal="pressed" from="Control/Button_jogo" to="." method="_on_Button_jogo_pressed"]
[connection signal="pressed" from="Control/Button_credits" to="." method="_on_Button_credits_pressed"]
